--- a/user-content/themes/base/changelog.txt
+++ b/user-content/themes/base/changelog.txt
@@ -1,3 +1,5 @@
+Version: 2.0.7 (2020.08.07)
+	+ minor PHP and CSS fixes
 Version: 2.0.5 (2020.04.29)
 	+ Updated schema markup to JSON-LD
 Version: 2.0.4 (2019.10.13)
